filezilla/filezilla-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filezilla
  namespace: weblio
  labels:
    app.kubernetes.io/name: filezilla
    app.kubernetes.io/component: file-manager
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: filezilla
      app.kubernetes.io/component: file-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: filezilla
        app.kubernetes.io/component: file-manager
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: filezilla
          image: linuxserver/filezilla:3.68.1
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 256Mi
