filezilla/filezilla-ingress.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filezilla
  namespace: weblio
  labels:
    app.kubernetes.io/name: filezilla
    app.kubernetes.io/component: file-manager
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`filezilla.weblio.se`)
      kind: Rule
      services:
        - name: filezilla
          port: 3000
  tls:
    certResolver: weblio-letsencrypt-http
